<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/HotelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/HotelText"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AllHotel"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/allhotel" />

        <Button
            android:id="@+id/HotelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hotelprice" />

        <Button
            android:id="@+id/HotelRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hotelrank" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/hotelView"
        android:layout_width="match_parent"
        android:layout_height="334dp" />

    <Button
        android:id="@+id/HotelSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />

    <Button
        android:id="@+id/HotelBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotels_back_btn" />

</LinearLayout>