<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Available Restaurants"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AllRest"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/allrest" />

        <Button
            android:id="@+id/RestPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restprice" />

        <Button
            android:id="@+id/RestRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restrank" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/RestView"
        android:layout_width="match_parent"
        android:layout_height="334dp" />

    <Button
        android:id="@+id/RestSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />

    <Button
        android:id="@+id/RestBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurants_back_btn" />

</LinearLayout>