<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Attractions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Attractions"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AllAttraction"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/allattract" />

        <Button
            android:id="@+id/AttractPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attractprice" />

        <Button
            android:id="@+id/AttractRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attractrank" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/AttractView"
        android:layout_width="match_parent"
        android:layout_height="334dp" />

    <Button
        android:id="@+id/AttractSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />

    <Button
        android:id="@+id/AttractBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attract_back_btn" />

</LinearLayout>