<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ShoppingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Shopping Areas"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AllShopping"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/allshop" />

        <Button
            android:id="@+id/ShopBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_weight="1"
            android:text="@string/shopbrand" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/ShoppingView"
        android:layout_width="match_parent"
        android:layout_height="334dp" />

    <Button
        android:id="@+id/ShoppingSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />

    <Button
        android:id="@+id/ShoppingBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_back_btn" />

</LinearLayout>