<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TransText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Available Transportation"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AllTrans"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/alltransportbtn" />

        <Button
            android:id="@+id/TransPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:text="@string/sorttransportprice" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/TransView"
        android:layout_width="match_parent"
        android:layout_height="334dp" />

    <Button
        android:id="@+id/TransSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />

    <Button
        android:id="@+id/TransBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_back_btn" />

</LinearLayout>